--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </section>
             
             <footer>
-              <small>Projeto Lading Page para FCamara & Alura. | © rsgamboa  </small>
+              <small>Projeto Landing Page para FCamara & Alura. | © rsgamboa  </small>
               <ul>
                 <li>
                   <a href="https://instagram.com/gam6oa" target="_blank">
